// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #fcfcfc;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #435a6f;
  border-radius: 4px;
  color: #435a6f;
  padding: 1rem;
}

abbr.c2 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c2 {
  font-style: italic;
}

kbd.c2 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c2 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c2 {
  font-weight: bold;
}

sub.c2,
sup.c2 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c2,
u.c2 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c2,
cite.c2,
var.c2,
em.c2 {
  font-style: italic;
}

kbd.c2,
pre.c2,
samp.c2 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c2 .c4 {
  top: 0.1em;
}

<div
  class="c0 c1"
  role="alert"
>
  <span
    class="c2 c3"
  >
    Alert
  </span>
</div>
`;

exports[`renders correctly when a palette prop is set 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #3926a5;
}

.c0 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #3926a5;
  border-radius: 4px;
  color: #3926a5;
  padding: 1rem;
}

abbr.c2 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c2 {
  font-style: italic;
}

kbd.c2 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c2 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c2 {
  font-weight: bold;
}

sub.c2,
sup.c2 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c2,
u.c2 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c2,
cite.c2,
var.c2,
em.c2 {
  font-style: italic;
}

kbd.c2,
pre.c2,
samp.c2 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c2 .c4 {
  top: 0.1em;
}

<div
  class="c0 c1"
  role="alert"
>
  <span
    class="c2 c3"
  >
    Alert
  </span>
</div>
`;

exports[`renders correctly when a title prop is set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #fcfcfc;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c3 + .sub-heading {
  margin-top: -1rem;
}

.c3:last-child {
  margin-bottom: 0;
}

h1.c3 {
  font-size: 3rem;
}

h2.c3 {
  font-size: 2.5rem;
}

h3.c3 {
  font-size: 2rem;
}

h4.c3 {
  font-size: 1.5rem;
}

h5.c3 {
  font-size: 1.25rem;
}

h6.c3 {
  font-size: 1rem;
}

.c3 .c6 {
  top: 0.1em;
}

.c2 {
  font-weight: 600;
  margin-bottom: 0.5rem;
}

.c0 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #435a6f;
  border-radius: 4px;
  color: #435a6f;
  padding: 1rem;
}

abbr.c5 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c5 {
  font-style: italic;
}

kbd.c5 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c5 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c5 {
  font-weight: bold;
}

sub.c5,
sup.c5 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c5,
u.c5 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c5,
cite.c5,
var.c5,
em.c5 {
  font-style: italic;
}

kbd.c5,
pre.c5,
samp.c5 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c5 .c6 {
  top: 0.1em;
}

@media (max-width:480px) {
  h1.c3 {
    font-size: 2rem;
  }
}

@media (max-width:480px) {
  h2.c3 {
    font-size: 1.8rem;
  }
}

@media (max-width:480px) {
  h3.c3 {
    font-size: 1.6rem;
  }
}

@media (max-width:480px) {
  h4.c3 {
    font-size: 1.4rem;
  }
}

@media (max-width:480px) {
  h5.c3 {
    font-size: 1.2rem;
  }
}

<div
  class="c0 c1"
  role="alert"
>
  <h6
    class="c2 heading c3 c4"
  >
    Title
  </h6>
  <span
    class="c5 c4"
  >
    Alert
  </span>
</div>
`;

exports[`renders correctly with a custom element 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #fcfcfc;
}

.c0 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #435a6f;
  border-radius: 4px;
  color: #435a6f;
  padding: 1rem;
}

<div
  class="c0 c1"
  role="alert"
>
  <label>
    Alert
  </label>
</div>
`;
